app/assets/stylesheets/components/_buttons.scss
.basket-button{
  position: relative;
  width: 70px;
  height: 70px;
  background: $main-color;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-color:$main-color;
  position: fixed;
  bottom: 0px;
  right: 0;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
  .basket-button-badge{
    position: absolute;
    top: -3px;
    right: 3px;
    font-size: 16px;
    background-color: $red;
    width: 24px;
    height: 24px;
    color: $white;
    border-radius: 16px;
    text-align: center;
    opacity: none;
    }
}

.default-button{
    background-color: $main-color;
    border-radius: 9px;
    font-size: 10px;
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}


.payment-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 4.5rem;
  margin: 25px 0px;
  background-color: $main-color;
  color: $white;
  border-radius: 9px;
  font-size: 20px;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

.button-background-colour {
  position: relative;
  position: fixed;
  bottom: 0px;
  right: 0%;
  left: 0%;
  background: $sub-main-color;
  height: 70px;
  opacity: 70%;
  border-top: $gold-colour solid 2px;
}

